--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@rainbow-me/rainbowkit": "0.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "5.6.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "wagmi": "0.11.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
